# timecard-pdf-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/skills/: vpn-connect.md  vpn-disconnect.md
.claude/tools/: coverage_report.py  db_verify.py
src/: coordinate_data.rs  db.rs  main.rs  server.rs  tcpdf_compat.rs  timecard_data.rs
