[package]
name = "timecard-pdf-rs"
version = "0.5.1"
edition = "2021"

[dependencies]
printpdf = "0.7"
lopdf = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "25"
chrono = "0.4"
dotenvy = "0.15"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
